<resources>
    <string name="app_name">Soficom Archive</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="select_the_storage_folder">Select the storage folder</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="input_your_code">Input your code</string>
    <string name="input_your_description">Input your description</string>
    <string name="click_to_scan_your_scan_the_bar_code">Barcode</string>
    <string name="save">Save</string>
    <string name="mode">Mode</string>
    <string name="enter_comments_optional">Enter the server link</string>
    <string name="todo">TODO</string>
    <string name="capture">Capture</string>
    <string name="clear_all_offline_login">Clear all offline login</string>
    <string name="upload_service">Upload Service</string>
    <string name="soficom_transfert">Soficom Transfert</string>
    <string name="archive">Archive</string>
    <string name="ios">IOS</string>
    <string name="android">Android</string>
    <string name="windows">Windows</string>
    <string name="auto">Auto</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="parameters">Parameters</string>
    <string name="server_config">Server configuration</string>
    <string name="folders_sync">Folders synchronisation</string>
    <string name="default_folder">Define a default folder</string>
    <string name="please_select_folder">Select folder</string>
    <string name="please_select_sub_folder">Select sub folder</string>
    <string name="server_updated">Server updated</string>
    <string name="gallery">See the unsent images</string>
    <string name="textvv">TextVV</string>
    <string name="please_sync_folder">Please synchronize folders please</string>
    <string name="upload_running">Uploading</string>
    <string name="upload_already_running">In progress</string>
    <string name="label_brush">Brush</string>
    <string name="label_text">Text</string>
    <!--DrawerLayoutHome-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!--/DrawerLayoutHome-->
    <string name="delete">Delete</string>
    <string name="check_or_uncheck_all">Check or UnCheck all</string>
    <string name="zero">0</string>
    <string name="logout">Log out</string>
    <string name="empty">Empty</string>
    <string name="show_detail">Show detail</string>
    <string name="invoice_code">Invoice Code</string>
    <string name="invoice_description">Invoice Description</string>
    <string name="invoice_folder">Invoice Folder</string>
    <string name="invoice_barcode">Invoice Barcode</string>
    <string name="the_server_is_not_found_please_check_your_internet_connection">The server is not found\nPlease check your internet connection</string>
    <string name="your_internet_connection_is_too_slow_please_try_again">Your internet connection is too slow\nPlease try again</string>
    <string name="no_internet_connection_check_your_internet_connection_and_try_again">No internet connection\nPlease Check your internet connection</string>
    <string name="network_failed_please_check_your_internet_connection">Network failed\nPlease check your internet connection</string>
    <string name="folders_updated">Folders updated</string>
    <string name="update">Check update</string>
    <string name="there_are_a_new_update">There is a new update do you want to download?</string>
    <string name="you_are_up_to_date">You are up to date</string>
    <string name="this_app_cant_talk_with_server">The server does not recognize this application</string>
</resources>
