<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:visible="false"
        android:id="@+id/action_delete"
        android:orderInCategory="103"
        android:title="@string/delete"
        android:icon="@drawable/ic_baseline_delete_white"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_sync"
        android:orderInCategory="102"
        android:title="@string/folders_sync"
        android:icon="@drawable/round_sync_white_24"
        app:showAsAction="ifRoom" />
    <item
        android:visible="false"
        android:id="@+id/action_check_uncheck"
        android:orderInCategory="101"
        android:title="@string/check_or_uncheck_all"
        android:icon="@drawable/ic_check_box_white"
        app:showAsAction="ifRoom" />
</menu>