<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    tools:context=".ui.activities.AuthenticationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.LinearLayoutCompat
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:focusable="true"
            android:paddingTop="56dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

            <android.support.v7.widget.AppCompatTextView
                android:layout_marginLeft="-8dp"
                android:layout_marginRight="-8dp"
                android:gravity="center"
                android:textSize="40sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/soficom_transfert"/>

            <android.support.v7.widget.AppCompatTextView
                android:gravity="center"
                android:textSize="20sp"
                android:layout_marginBottom="24dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/archive"/>


            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/autoRbn"
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/auto" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/onlineRbn"
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/online" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/offlineRbn"
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/offline" />

            </RadioGroup>

            <!--Mode -->
            <android.support.v7.widget.LinearLayoutCompat
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatTextView
                    android:textSize="18sp"
                    android:text="@string/mode"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/modeSpr"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_weight="1"/>

            </android.support.v7.widget.LinearLayoutCompat>

            <!-- Email Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <android.support.design.widget.TextInputEditText android:id="@+id/userNameEdt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/user_name" />
            </android.support.design.widget.TextInputLayout>

            <!-- Password Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/userPassEdt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/password"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:padding="12dp"
                android:text="@string/login"/>

            <android.support.v7.widget.AppCompatTextView
                android:visibility="gone"
                android:clickable="true"
                android:id="@+id/cleanTxt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:text="@string/clear_all_offline_login"
                android:gravity="center"
                android:textSize="18sp"
                android:focusable="true" />


        </android.support.v7.widget.LinearLayoutCompat>

    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/configBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/round_settings_white_24" />

</android.support.design.widget.CoordinatorLayout>