<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.activities.CaptureActivity">

    <android.support.v7.widget.LinearLayoutCompat
        android:paddingTop="56dp"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <android.support.v7.widget.AppCompatImageView
            android:scaleType="fitXY"
            android:id="@+id/imagePreview"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center_horizontal" />

        <!--Code Picture-->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/codeEdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/input_your_code" />
        </android.support.design.widget.TextInputLayout>

        <!--Description Picture-->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/descEdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="5"
                android:lines="5"
                android:minLines="5"
                android:scrollbars="vertical"
                android:inputType="text"
                android:hint="@string/input_your_description" />
        </android.support.design.widget.TextInputLayout>

        <!--Description BarCode-->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/barCodeEdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/click_to_scan_your_scan_the_bar_code" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/saveBtn"
            android:text="@string/save"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/cancelBtn"
            android:text="@string/cancel"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.v7.widget.LinearLayoutCompat>
</ScrollView>